<resources>
    <string name="app_name">BloodGeniX</string>

    <string name="blood_donation">Find out what blood type you are!\n Register with one of our approved\ntask  and get started.</string>
    <string name="Search_blood_donor">Need a donor? Register with one of\n our approved donor and get\nstarted!</string>
    <string name="Explore_update">Explore the different area and \n facility over app and find or\ndonate Blood.</string>
    <string name="description">Description</string>
    <string name="donate_blood">Donate Blood</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="let_s_nget_started">Let’s\nGet Started</string>
    <string name="there_is_a_hope_of_life_to_someone_n_in_your_blood_donation">There is a hope of life to someone\nin your blood donation</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="login"><u>LOG IN</u></string>
    <string name="login_2">LOGIN</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_3">Login</string>
    <string name="hint">hint</string>
    <string name="login_4">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="sign_up_page">SIGN Up Page</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="select_date_of_birth">Select Date Of Birth</string>
    <string name="identity_proof">Identity Proof</string>
    <string name="gender">Gender</string>
    <string name="otp_details">We Will send you a one -time password\n to this mobile number</string>
    <string name="_91">+91-</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="_91_9768522052">+91 9768522052</string>
    <string name="didn_t_you_receive_the_otp">Didn’t you receive the OTP?</string>
    <string name="creating_acount_wait">Creating acount wait ...</string>
    <string name="loading">Loading ...</string>
    <string name="salutation">Hey there,\n</string>

    <string name="navigation_open">Open Navigation drawer </string>
    <string name="navigation_close">Close Navigation drawer </string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="sharing">Sharing</string>
    <string name="bottom">bottom_menu</string>
    <string name="blood_donation_form">Blood Donation form</string>
    <string name="authorizeValue">I authorize this app and state that i am above 18 year old. I agree to display my details, so that Nearby could contact me.</string>
    <string name="apply_as_donor">Apply as Donor</string>
    <string name="mention_month_passed">Mention month passed</string>
    <string name="yes">yes</string>
    <string name="did_you_previously_donated">Did you previously donated?</string>
    <string name="no">no</string>
    <string name="any_other_disease_please_specify">Any other disease please specify</string>
    <string name="blood_group">Blood Group</string>

    <string name="diabetic_count">Diabetic Count</string>
    <string name="weight">Weight :</string>
    <string name="congratulation_you_are_successfully_applied_for_nblood_donation">Congratulation you are successfully applied\nfor blood donation</string>
    <string name="verified">Verified</string>
    <string name="active">Active</string>
    <string name="what_s_the_reason_of_this_request">What\'s the reason of this request?</string>
    <string name="apply_for_donation">Apply for Donation</string>
    <string name="search">Search</string>
    <string name="aboutUs">The BloodGenix Blood Donor App was selected for helping make giving blood convenient and easy with many special features for donors. Users of the app can start by learning about eligibility based on health, recent travel, etc., then search for blood drives nearby using a built-in map tool and schedule an appointment. Once users have a scheduled appointment, they can complete the RapidPass pre-screening questionnaire directly in the app to save time during their blood drive visit. Donors can also use the app to view donation history and results from health screenings, track which hospital their blood goes to, and learn about other ways to volunteer or contribute.\nThe platform provides research-based studies and carefully curated lists, which allow users to compare and find the best apps on the market. BloodGenix is managed by a team of tech industry professionals that aim to help consumers find the tools they need to live a more convenient and productive life.</string>

    <string name="_1stPoint">\u2022 Age and weight-between 18-65 years and minimum weight 50kg.</string>
    <string name="_2ndPoint">\u2022 Donor should not be suffering from transmittable disease.</string>
    <string name="_3rdPoint">\u2022 Upload proper document for self validation.</string>
    <string name="_4thPoint">\u2022 If any person is found performing wrong malpractice then strict action would be taken.</string>
    <string name="_5thPoint">\u2022 for communication, there is a separate chat block.</string>
    <string name="_6thPoint">\u2022 At a time can apply for only one option either Donor or Recipient</string>


<!--    <string name="google_maps_key">AIzaSyCgXfPPsUeJNU_NLTA-pbqZGdlHKCfOYXI</string>-->
<!--    <string name="google_maps_key">AIzaSyCq0_Pu01ArQVXzE958EtU9t83i2FNazys</string>-->
    <string name="google_map_key">AIzaSyBseaedCRcpDjA108DSEDrMen5uVOe21rY</string>
<!--    AIzaSyCgXfPPsUeJNU_NLTA-pbqZGdlHKCfOYXI-->
    <string-array name="periodMonth">
        <item>Less than 3 month</item>
        <item>4-7 month</item>
        <item>More than 7 month</item>
    </string-array>

    <string-array name="resonBlood">
        <item>Accident</item>
        <item>Surgery</item>
        <item>Pregnancy</item>
        <item>Cancer</item>
        <item>Transplant</item>
        <item>Thalassemia</item>
        <item>Low Hemoglobin</item>
        <item>Other</item>
    </string-array>

    <string-array name="bloodgroup">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string-array name="diabeticCount">
        <item>1-3</item>
        <item>4-6</item>
        <item>More than 8</item>
    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
</resources>