<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonationForm">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="40dp">

        <ImageButton
            android:id="@+id/cancelBtn"
            android:layout_width="38dp"
            android:layout_height="36dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/cross_style"
            android:src="@drawable/ic_cancel"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/blood_donation_form"
            android:textColor="@color/Header_1"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bloodGroupLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="37dp"
            app:errorEnabled="false"
            app:helperText="Required*"
            app:helperTextTextColor="@color/red">

            <AutoCompleteTextView
                android:id="@+id/bloodGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/blood_group"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="37dp"
            android:hint="Location"
            app:helperText="Required*"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/locationDonation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="37dp"
            android:fontFamily="@font/poppins"
            android:text="Are you Diabetic?"
            android:textColor="@color/content_2"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="37dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/yes"
                android:textColor="@color/content_1"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="100dp"
                android:text="@string/no"
                android:textColor="@color/content_1"
                android:textSize="13sp" />
        </RadioGroup>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginStart="37dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="37dp"
            android:background="@color/Header_1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/diabeticCountLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="37dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="37dp"
            app:helperText="Required"
            app:helperTextTextColor="@color/red"
            >

            <AutoCompleteTextView
                android:id="@+id/diabeticCount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/diabetic_count"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="37dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="37dp"
            app:helperText="Required"
            app:helperTextTextColor="@color/red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otherSpecify"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/any_other_disease_please_specify"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="37dp"
            android:layout_marginEnd="37dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textSize="18sp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/content_2"
                android:layout_gravity="center_vertical"/>

            <NumberPicker
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:theme="@style/NumberPickerStyle"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kg"
                android:textColor="@color/content_1"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="37dp"
            android:fontFamily="@font/poppins"
            android:text="@string/did_you_previously_donated"
            android:textColor="@color/content_2"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="37dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/yes2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/yes"
                android:textColor="@color/content_1"
                android:textSize="13sp" />

            <RadioButton
                android:id="@+id/no2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="100dp"
                android:text="@string/no"
                android:textColor="@color/content_1"
                android:textSize="13sp" />
        </RadioGroup>

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_marginStart="37dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="37dp"
            android:background="@color/Header_1" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PeriodLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="37dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="37dp"
            app:helperText="Required"
            app:helperTextTextColor="@color/red">

            <AutoCompleteTextView
                android:id="@+id/DonationPeriod"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/mention_month_passed"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/authorise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="37dp"
            android:fontFamily="@font/poppins"
            android:gravity="start"
            android:onClick="checkAuthorise"
            android:text="@string/authorizeValue"
            android:textAlignment="textStart"
            android:textColor="@color/content_1"
            android:textSize="15sp" />

        <Button
            android:id="@+id/applyDonation"
            android:layout_width="297dp"
            android:layout_height="60dp"
            android:layout_marginStart="37dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="37dp"
            android:defaultFocusHighlightEnabled="false"
            android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
            android:elevation="2dp"
            android:enabled="false"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/apply_as_donor"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            app:cornerRadius="8dp" />
    </LinearLayout>


</ScrollView>