<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_sheet_background"
    tools:context=".LoginScreen"
    android:paddingBottom="25dp">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="38dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/cross_style"
        android:src="@drawable/ic_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/login_2"
        android:textColor="@color/Header_1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_btn" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_btn">

        <com.hbb20.CountryCodePicker
            android:id="@+id/codePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_box_style"
            android:gravity="center" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/mobile_number"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:startIconDrawable="@drawable/ic_baseline_call_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:inputType="phone"
                android:maxLength="10"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_weight="1"
                android:text="Remember me" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_semibold"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/forgot_password"
                android:textColor="@color/App_colour"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login_4"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>