<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_welcomepage"
    tools:context=".Welcome">

    <!--    <com.google.android.material.textfield.TextInputLayout-->
    <!--        android:id="@+id/mem_ucode"-->
    <!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="25dp"-->
    <!--        android:layout_marginEnd="25dp"-->
    <!--        android:backgroundTintMode="screen"-->
    <!--        android:hint="@string/uc1"-->
    <!--        app:boxCornerRadiusBottomEnd="10dp"-->
    <!--        app:boxCornerRadiusBottomStart="10dp"-->
    <!--        app:boxCornerRadiusTopEnd="10dp"-->
    <!--        app:boxCornerRadiusTopStart="10dp"-->
    <!--        app:boxStrokeColor="@color/heading_color"-->
    <!--        app:hintTextColor="@color/heading_color"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent">-->

    <!--        <com.google.android.material.textfield.TextInputEditText-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:inputType="text" />-->

    <!--    </com.google.android.material.textfield.TextInputLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/welcome_screen_img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/poppins_semibold"
                android:lineSpacingExtra="-7dp"
                android:text="@string/let_s_nget_started"
                android:textColor="@color/Header_1"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:autoText="true"
                android:fontFamily="@font/poppins"
                android:lineSpacingExtra="-3dp"
                android:text="@string/there_is_a_hope_of_life_to_someone_n_in_your_blood_donation"
                android:textColor="@color/Header_1"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="Already have an account?"
                android:textColor="@color/content_1"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/loginView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/loginView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_semibold"
                android:paddingLeft="7dp"
                android:paddingTop="2dp"
                android:paddingRight="7dp"
                android:paddingBottom="2dp"
                android:text="@string/login"
                android:textColor="@color/App_colour"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/Header_1_light"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="315dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sign_up"
            android:textSize="18sp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>